--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "proxy-server",
-  "version": "1.0.0",
-  "main": "index.js",
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
